# breakpoint-analytics

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-dashboard.yml  update-data.yml  update-model.yml
SACKMANN/: Makefile  README.md  VALIDATION_GUIDE.md  plan.md
SACKMANN/analytics/: config.py  elo.py  feature_engineering.py  score_parser.py  validation.py  win_probability.py
SACKMANN/dashboard/: app.js
SACKMANN/outputs/: elo_rankings.json  validation_results.json
SACKMANN/pipelines/: README.md  export_dashboard_data.py  ingest_sackmann.py
SACKMANN/tests/: __init__.py  test_feature_engineering.py
TENNISMYLIFE/: README.md
TENNISMYLIFE/analytics/: __init__.py  config.py
TENNISMYLIFE/tests/: __init__.py
analytics/: README.md  __init__.py  config.py  elo.py  feature_engineering.py  metrics_comparator.py  utils.py  win_probability.py
api/: main.py  requirements.txt
dashboard/: app.js  app_pyscript.py  index.html  styles.css
dashboard/css/: style.css
dashboard/js/: app.js
docs/: index.html
docs/css/: style.css  theme.css
docs/js/: app.js  config.js
outputs/: elo_rankings.json  feature_cols.json  model.pkl  player_stats_latest.csv  player_summary.json
pipelines/: README.md  __init__.py  build_features.py  export_dashboard_data.py  features.py  ingest.py  ingest_sackmann.py  train_model.py  validate_models.py
