[project]
name = "breakpoint-analytics"
version = "0.1.0"
description = "Tennis analytics dashboard with Elo ratings and match predictions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rapidfuzz>=3.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "jupyter",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analytics", "pipelines"]
